@@ -19,7 +19,6 @@
 package oripa.gui.presenter.file;
 
 import java.io.File;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -97,7 +96,8 @@ public class FileAccessPresenter<Data> {
 		logger.debug("saving {}", correctedPath);
 
 		try {
-			fileAccessService.saveFile(data, correctedPath);
+			fileAccessService.saveFile(data, correctedPath,
+					fileAccessService.getSavableTypeByDescription(chooser.getSelectedFilterDescription()));
 		} catch (Exception e) {
 			chooser.showErrorMessage(e);
 			return Optional.empty();
@@ -130,21 +130,15 @@ public class FileAccessPresenter<Data> {
 
 	private List<FileFilterProperty> toFileFilterProperties(final List<FileAccessSupport<Data>> supports) {
 		return supports.stream()
-				.map(support -> new FileFilterProperty(support.getDescription(), support.getExtensions()))
+				.map(support -> new FileFilterProperty(
+						support.getTargetType().getKeyText(), support.getDescription(), support.getExtensions()))
 				.collect(Collectors.toList());
 	}
 
 	private String replaceExtension(final String path, final String ext) {
-
-		String path_new;
-
-		// drop the old extension
-		path_new = path.replaceAll("\\.\\w+$", "");
-
+		// drop the old extension and
 		// append the new extension
-		path_new += "." + ext;
-
-		return path_new;
+		return path.replaceAll("\\.\\w+$", "") + "." + ext;
 	}
 
 	/**
@@ -152,24 +146,17 @@ public class FileAccessPresenter<Data> {
 	 *
 	 * @param path
 	 * @param extensions
-	 *            ex) ".png"
+	 *            example: "png"
 	 * @return path string with new extension
 	 */
 	private String correctExtension(final String path, final String[] extensions) {
 
-		String path_new = new String(path);
-
 		logger.debug("extensions[0] for correction: {}", extensions[0]);
-
-		var filtered = Arrays.asList(extensions).stream()
-				.filter(ext -> path.endsWith("." + ext))
-				.collect(Collectors.toList());
-
-		// the path's extension is not in the targets.
-		if (filtered.isEmpty()) {
-			path_new = replaceExtension(path_new, extensions[0]);
+		if (List.of(extensions).stream()
+				.noneMatch(ext -> path.endsWith("." + ext))) {
+			return replaceExtension(path, extensions[0]);
 		}
 
-		return path_new;
+		return path;
 	}
 }
